--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,8 +15,12 @@ dependencies = [
     "jax[cuda13] (>=0.8.1,<0.9.0)",
     "pyinstrument (>=0.4.3,<1.0.0)",
     "sympy (>=1.14.0,<2.0.0)",
-    "xprof (>=2.21.1,<3.0.0)",
     "pynput (>=1.8.1,<2.0.0)",
+    "xprof (>=2.21.3,<3.0.0)",
+    "glfw (>=2.10.0,<3.0.0)",
+    "vispy (>=0.15.2,<0.16.0)",
+    "pytest (>=9.0.1,<10.0.0)",
+    "line-profiler (>=5.0.0,<6.0.0)",
 ]
 
 
