--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,17 +10,12 @@ requires-python = ">=3.11,<3.12"
 dependencies = [
     "scipy (>=1.16.3,<2.0.0)",
     "py5 (>=0.10.7a0,<0.11.0)",
-    "install-jdk (>=1.1.0,<2.0.0)",
     "matplotlib (>=3.10.7,<4.0.0)",
     "jax[cuda13] (>=0.8.1,<0.9.0)",
     "pyinstrument (>=0.4.3,<1.0.0)",
-    "sympy (>=1.14.0,<2.0.0)",
-    "pynput (>=1.8.1,<2.0.0)",
     "xprof (>=2.21.3,<3.0.0)",
     "glfw (>=2.10.0,<3.0.0)",
     "vispy (>=0.15.2,<0.16.0)",
-    "pytest (>=9.0.1,<10.0.0)",
-    "line-profiler (>=5.0.0,<6.0.0)",
 ]
 
 
@@ -29,5 +24,11 @@ requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
 [dependency-groups]
 dev = [
-    "ipykernel (>=7.1.0,<8.0.0)"
+    "ipykernel (>=7.1.0,<8.0.0)",
+    "pytest (>=9.0.1,<10.0.0)",
+    "line-profiler (>=5.0.0,<6.0.0)",
+    "sympy (>=1.14.0,<2.0.0)",
+]
+output = [
+    "moviepy (>=2.2.1,<3.0.0)",
 ]
