Pendulum stability fractal

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "xprof (>=2.21.3,<3.0.0)",
     "glfw (>=2.10.0,<3.0.0)",
     "vispy (>=0.15.2,<0.16.0)",
+    "colorstamps (>=0.1.3,<0.2.0)",
 ]
 
 
